# TVALGBRA

./: .gitignore  CMakeLists.txt  README.md  TVALGBRA.cpp  TVALGBRA.h
src/: GADGETS.CPP  TVALGBRA.DSW  TVALGBRA.bak  TVALGBRA.cpp  TVALGBRA.h  tvalgbra.csm  tvalgbra.ide  tvalgbra.~de
