# CMakeList.txt: proyecto de CMake para TVALGBRA, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

project ("TVALGBRA")

# Agregue un origen al ejecutable de este proyecto.
add_executable (TVALGBRA "TVALGBRA.cpp" "TVALGBRA.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
